[gd_scene load_steps=5 format=2]

[ext_resource path="res://ComboHitBox.png" type="Texture" id=1]
[ext_resource path="res://ComboHitbox.gd" type="Script" id=2]
[ext_resource path="res://ComboButton.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="HitArea" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 17, 17 )
shape = SubResource( 1 )

[node name="ComboButton" parent="." groups=["ComboButton"] instance=ExtResource( 3 )]
position = Vector2( 5, 5 )

[connection signal="area_entered" from="." to="." method="_on_HitArea_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_HitArea_area_exited"]
